--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -18,10 +18,9 @@
 @import "general/grid";
 @import "general/page";
 
+// @import "general/font-awesome-scss/fontawesome.scss";
+// @import "general/font-awesome-scss/solid.scss";
+
 @import "general/includes";
 
 @import "responsive/all";
-
-#app {
-    display: block;
-}
