--- a/assets/scss/config/_typography.scss
+++ b/assets/scss/config/_typography.scss
@@ -1,7 +1,7 @@
 $font-family: "MuseoSansCyrl", fantasy;
 
 $font-scale: 1;
-$font-size: 1.8rem;
+$font-size: 16px;
 $font-size-heading: 3.6rem;
 $font-size-small: 1.4rem;
 $line-height: 1.4;
