--- a/assets/scss/utils/_functions.scss
+++ b/assets/scss/utils/_functions.scss
@@ -1,3 +1,7 @@
 @function remToPx($value) {
     @return $value / 1rem * 10px * $font-scale;
 }
+
+@function rem($pixels, $context: $font-size) {
+    @return #{$pixels/$context}rem;
+  } 
