--- a/assets/scss/general/_page.scss
+++ b/assets/scss/general/_page.scss
@@ -3,7 +3,7 @@ html, body {
 }
 
 html {
-    font-size: 10px * $font-scale;
+    font-size: $font-size;
 }
 
 body {
@@ -16,16 +16,20 @@ body {
     color: $font-color;
     background-color: $backface-color;
 }
-
+ 
 #app {
+    // min-height: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+}
+
+.page {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-#content {
-    margin-bottom: auto;
+    justify-content: flex-start;
+    background-color: #f9f9f9;
 }
 
 .container {
@@ -33,4 +37,8 @@ body {
     max-width: $content-width;
     margin: 0 auto;
     position: relative;
+
+    &--shadow {
+        box-shadow: 0px 37px 37px rgba(0, 0, 0, 0.1);
+    }
 }
