--- a/assets/scss/general/_includes.scss
+++ b/assets/scss/general/_includes.scss
@@ -1,6 +1,6 @@
 // Components
 @import "../components/sidebars";
-@import "../components/text-block";
+@import "../blocks/text-block";
 
 // Page components
 @import "../components/layout";
