--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,4 @@
-@import "components/header";
-@import "components/logo";
-@import "components/main-menu";
+@import "blocks/header";
+@import "blocks/logo";
+@import "blocks/main-menu";
+@import "blocks/languages";
