--- a/assets/scss/blocks/_article.scss
+++ b/assets/scss/blocks/_article.scss
@@ -1,15 +1,100 @@
-.article {
+.article-prew {
     display: flex;
     align-items: center;
-    max-width: 775px;
+    max-width: 100%;
 
-    &__img {
-        width: 50%;
+    &__photo {
+        width: 43%;
         max-width: 350px;
-        min-width: 200px;
+        min-width: 250px;
+        max-height: 300px;
+
+        &-img {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+            max-height: 300px;
+            margin:  0 auto;
+        }
     }
 
     &__content {
+        width: 57%;
         margin-left: 18px;
+    }
+
+    &__title {
+        font-size: rem(22px);
+        line-height: em(24px, 22px);
+        font-weight: 500;
+        margin-top: 0;
+        margin-bottom: $padding;
+    }
+
+    &__info {
+        font-size: rem(12px);
+        color: #000;
+        opacity: 0.9;
+        display: flex;  
+
+        &-icon {
+            background-color: $content-bg-color;
+            padding-top: 4px;
+            width: 20px;
+            height: 20px;
+            text-align: center;
+            vertical-align: middle;
+            border-radius: 50%;
+            color: $icon-color; 
+            margin-right: $padding / 2; 
+        }
+    }
+    
+    &__date {
+        display: inline-block;
+        margin-right: $padding * 2;
+    }
+
+    &__comments {
+        display: block;
+        padding-left: 20px;
+    }
+
+    &__text {
+        font-size: rem(15px);
+        line-height: em(20px, 15px);
+        font-weight: 100;
+        margin-bottom: $padding / 2;
+    }
+
+    &__link {
+        font-weight: normal;
+        display: inline-block;
+        padding: $padding / 4 0;
+
+        &-icon {
+            margin-left: $padding / 2;
+            margin-bottom: 2px;
+            color: $accent-color;
+            transition: color, transform $transition;
+            font-size: rem(22px);
+            vertical-align: middle;
+        }
+
+        &:hover {
+            color: lighten($font-color, 20%);
+
+            .article-prew__link-icon {
+                transform: translateX(7px);
+            }
+        }
+    }
+}
+
+.article-list {
+    .article-prew {
+        &:not(:last-child) {
+            margin-bottom: $padding * 3;
+        }  
     }
 }
