--- a/assets/scss/blocks/_languages.scss
+++ b/assets/scss/blocks/_languages.scss
@@ -1,22 +1,28 @@
 .languages {
     font-size: rem(14px);
     font-weight: 100;
+    display: flex;
 
     &__item {
-        display: inline-block;
+        padding: $padding / 4;
         position: relative;
         line-height: 1;
+        vertical-align: middle;
+        transition: opacity $transition;
+
+        &:hover {
+            opacity: 0.8;
+        }
 
         &:not(:last-child) {
-            padding-right: 18px;
-            margin-right: 10px;
+            margin-right: 24px;
             &::after {
                 content: '';
                 position: absolute;
-                top: 0;
-                right: 0;
+                top: 2px;
+                right: -14px;
                 width: 2px;
-                height: 100%;
+                height: 18px;
                 background-color: #f0f0f0;
             }
         }
