--- a/assets/scss/blocks/_main-menu.scss
+++ b/assets/scss/blocks/_main-menu.scss
@@ -4,18 +4,18 @@
 
     &__link {
         display: block;
-        padding: 2px 13px 22px;
-        padding-right: 17px;
+        padding: 6px $padding 22px $padding;
         position: relative;
+        text-align: center;
 
         &:not(:last-child) {
-            padding: 2px 16px 22px;
-            padding-right: 17px;
+            // 2px for separator
+            padding-right: $padding + 2; 
 
             &::after {
                 content: '';
                 position: absolute;
-                top: 5px;
+                top: 10px;
                 right: 0;
                 width: 2px;
                 height: 15px;
@@ -28,21 +28,23 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 0;
+            width: 100%;
             height: 4px;
             background-color: #F2C94C;
-            transition: width 0.25s ease;
+            transition: transform 0.25s $transition-ease;
+            transform: scale(0);
+            transform-origin: center bottom;
         }
 
         &:hover {
             &::before {
-                width: 100%;
+                transform: scale(1);
             }
         }
 
         &.active {
             &::before {
-                width: 100%;
+                transform: scale(1);
             }
         }
     }
