--- a/assets/scss/config/_colors.scss
+++ b/assets/scss/config/_colors.scss
@@ -2,22 +2,29 @@ $primary-color: #007dc4;
 $accent-color: #db2820;
 
 $background-color: #fff;
-$backface-color: #fff;
+$content-bg-color: #F0F0F0; 
+$backface-color: #E5E5E5;
+
+$footer-background-color: #212121;
+$footer-font-color: #F8F8F8;
 
 $heading-background-color: #ebf9fa;
-
 $header-first-line-color: #163149;
-$footer-color: #163149;
 
-$font-color: #022749;
+$accent-color: #F2C94C;
+$accent-color-2: #EB5757; 
+
+$font-color: #000;
 $font-color-heading: $font-color;
 $font-color-grey: #6e839d;
 $font-color-light: #fff;
 $font-color-accent: #0299eb;
 
+$link-dark-color: #292828;
 $success-color: #2db86e;
 $error-color: $accent-color;
 
 $border-color: #dbe7f3;
 
 $input-color: #dbe7f3;
+$icon-color: #4B4B4B;
