--- a/assets/scss/general/_includes.scss
+++ b/assets/scss/general/_includes.scss
@@ -1,6 +1,7 @@
 // Components
 @import "../components/sidebars";
 @import "../blocks/text-block";
+@import "../blocks/buttons";
 
 // Page components
 @import "../components/layout";
