--- a/assets/scss/blocks/_news.scss
+++ b/assets/scss/blocks/_news.scss
@@ -2,6 +2,34 @@
     display: flex;
     flex-direction: column;
     max-width: 257px;
+    position: relative;
+
+    &:not(:first-of-type) {
+        margin-top: $padding;
+    }
+
+    &--separator {
+        padding-bottom: $padding / 1.75;
+
+        &:last-child {
+            &:after {
+                content: none;
+            }
+        }
+
+        &:after {
+            content: '';
+            display: inline-block;
+            position: absolute;
+            bottom: 0;
+            background-color: $content-bg-color;
+            max-width: 100px;
+            width: 80%;
+            height: 2px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
 
     &__img {
         max-width: 100%;
@@ -10,7 +38,9 @@
     &__title {
         font-size: rem(16px);
         font-weight: 500;
+        line-height: normal;
         margin-bottom: $padding / 2;
+        margin-top: $padding / 1.75;
     }
 
     &__info {
@@ -48,5 +78,17 @@
         line-height: em(20px, 15px);
         font-weight: 100;
         margin: $padding / 2 0;
+    }
+}
+
+.news-list {
+    &__title {
+        margin-bottom: $padding * 2;
+    }
+}
+
+.events-list {
+    &__title {
+        margin-bottom: $padding * 2.75;
     }
 }
