--- a/assets/scss/blocks/_footer.scss
+++ b/assets/scss/blocks/_footer.scss
@@ -1,4 +1,76 @@
 .footer {
     background-color: $footer-background-color;
-    height: 246px;
+    color: $footer-font-color;
+    
+    &__main {
+        padding: $padding * 1.75  $padding * 3;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        width: 54%;
+    }
+
+    &__list {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        font-size: rem(15px);
+        line-height: normal;
+        font-weight: 100;
+    }
+
+    &__list-item {
+        margin-bottom: 1px;
+
+        &.head {
+            font-size: rem(14px);
+            text-transform: uppercase;
+            font-weight: 400;
+        }
+    }
+
+    &__list-link {
+        display: inline-block;
+        padding: $padding * 0.25;
+        transition: opacity $transition;
+
+        &:hover {
+            opacity: 0.85;
+        }
+    }
+
+    &__bottom {
+        background-color: #313131;
+        padding: $padding  $padding * 3;
+        display: flex;
+        align-items: center;
+        font-size: rem(13px);
+        line-height: normal;
+    }
+
+    &__copyr {
+        margin: 0;
+        font-weight: 400;
+    }
+
+    &__author {
+        margin: 0;
+        margin-left: auto;
+        font-weight: 300;
+    }
+
+    &__author-link {
+        font-weight: 400;
+        text-decoration: underline;
+
+        &:hover {
+            text-decoration: none;
+            opacity: 0.85;
+        }
+    } 
 }
