--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -2,10 +2,15 @@
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-    padding: $padding 0 0 $padding;
-    margin-bottom: 5px;
-    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+    padding: $padding 0 0 $padding;  
     min-height: $header-height;
+    position: relative;
+    z-index: 1;
+
+    &--shadow {
+        margin-bottom: 5px;
+        box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+    }
 
     &__logo {
         align-self: flex-start;
