--- a/assets/scss/blocks/_main-menu.scss
+++ b/assets/scss/blocks/_main-menu.scss
@@ -27,6 +27,10 @@
         &:last-child {
             .main-menu__link {
                 padding: 6px $padding 22px $padding;
+
+                &::after {
+                    content: none;
+                }
             }
         }
 
@@ -43,15 +47,15 @@
         position: relative;
         text-align: center;
 
-            &::after {
-                content: '';
-                position: absolute;
-                top: 10px;
-                right: 0;
-                width: 2px;
-                height: 15px;
-                background-color: #f0f0f0;
-            }     
+        &::after {
+            content: '';
+            position: absolute;
+            top: 10px;
+            right: 0;
+            width: 2px;
+            height: 15px;
+            background-color: #f0f0f0;
+        }     
 
         &::before {
             content: '';
@@ -66,9 +70,6 @@
             transform-origin: center bottom;
         }
 
-        &:hover {
-            
-        }
     }
 }
 
