--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -48,7 +48,7 @@
     font-size: rem(33px);
     font-weight: 900;
     line-height: normal;
-    margin-top: $padding * 1.5;
+    margin-top: 0;
     margin-bottom: $padding * 1.5;
 }
 
