--- a/assets/scss/general/_global.scss
+++ b/assets/scss/general/_global.scss
@@ -18,4 +18,13 @@ p {
 	&:hover {
 		color: $font-color-accent;
 	}
+
+	&--blue {
+		color: $font-color-accent;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
 }
