--- a/assets/scss/blocks/_news.scss
+++ b/assets/scss/blocks/_news.scss
@@ -4,10 +4,6 @@
     max-width: 257px;
     position: relative;
 
-    &:not(:first-of-type) {
-        margin-top: $padding;
-    }
-
     &--separator {
         padding-bottom: $padding / 1.75;
 
@@ -54,11 +50,17 @@
 .news-list {
     &__title {
         margin-bottom: $padding * 2;
-    }
+    }  
 }
 
 .events-list {
     &__title {
         margin-bottom: $padding * 2.75;
+    }
+
+    .news {
+        &:not(:first-of-type) {
+            margin-top: $padding;
+        }
     }
 }
