--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,6 +1,9 @@
 .page--index {
     .page-content {
-        padding-top: $padding * 2.25;
+        padding-top: $padding * 2.25;   
     }
+    .header {
+        margin-bottom: 5px;
+    }   
 }
 
