--- a/assets/scss/blocks/_article.scss
+++ b/assets/scss/blocks/_article.scss
@@ -2,9 +2,13 @@
     padding-bottom: $padding * 3;
     border-bottom: 1px solid $content-bg-color;
     margin-bottom: $padding * 3;
+
+    &__head {
+        margin-top: -$padding * 0.5;
+    }
     
     &__content {
-        margin: $padding * 2.25 0 $padding * 3; 
+        margin: $padding * 2 0 $padding * 3; 
         padding-top: $padding * 2;
         padding-bottom: $padding * 3;
         border-top: 1px solid $content-bg-color;
