--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -1,11 +1,39 @@
+.page {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #f9f9f9;
+}
+
+.container {
+    width: 100%;
+    max-width: $content-width;
+    margin: 0 auto;
+    position: relative;
+    background-color: $background-color;
+    box-shadow: 0px 37px 37px rgba(0, 0, 0, 0.1);
+}
+
 .page-content {
     background-color: $background-color;
     padding: $padding * 3 $padding * 3 $padding * 3.25; 
-    display: grid;
-    grid-template-columns: 6fr 2fr;
-    grid-column-gap: $padding * 2.875;
-    grid-row-gap: $padding * 2.25;
-    align-items: start;
+    // display: grid;
+    // grid-template-columns: 6fr 2fr;
+    // grid-column-gap: $padding * 2.875;
+    // grid-row-gap: $padding * 2.25;
+    // align-items: start;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.page-main {
+    max-width: 760px;
+}
+
+.page-sitebar {
+    max-width: 257px;
 }
 
 .page-title {
@@ -25,7 +53,7 @@
             content: '';
             position: absolute;
             top: 6px;
-            left: -51px;
+            left: -53px;
             width: 33px;
             height: 16px;
             display: block;
@@ -49,7 +77,7 @@
     font-weight: 900;
     line-height: normal;
     margin-top: 0;
-    margin-bottom: $padding * 1.5;
+    margin-bottom: $padding * 2.25;
 }
 
 .page-title-h2 {
@@ -70,4 +98,16 @@
 
 .uppercase {
     text-transform: uppercase;
+}
+
+.page-slider-small {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: $padding * 3;
+
+    .carousel {
+        width: 772px;
+        align-self: flex-start;
+    }
 }
