--- a/assets/scss/blocks/_article-prew.scss
+++ b/assets/scss/blocks/_article-prew.scss
@@ -4,6 +4,7 @@
     max-width: 100%;
 
     &__photo {
+        display: block;
         width: 43%;
         max-width: 350px;
         min-width: 250px;
@@ -29,6 +30,11 @@
         font-weight: 500;
         margin-top: 0;
         margin-bottom: $padding;
+        transition: opacity $transition;
+
+        &:hover {
+            opacity: 0.85;
+        }
     }
 
     &__info {
