--- a/assets/scss/blocks/_footer.scss
+++ b/assets/scss/blocks/_footer.scss
@@ -31,6 +31,14 @@
             font-size: rem(14px);
             text-transform: uppercase;
             font-weight: 400;
+
+            span.footer__list-link {
+                cursor: default;
+
+                &:hover {
+                    opacity: 1;
+                }
+            }
         }
     }
 
