--- a/assets/scss/blocks/_news.scss
+++ b/assets/scss/blocks/_news.scss
@@ -27,16 +27,33 @@
         }
     }
 
-    &__img {
+    &__photo {
         max-width: 100%;
+        display: block;
+    }
+
+    &__photo-img {
+        max-width: 100%;
+        display: block;
     }
 
     &__title {
         font-size: rem(16px);
         font-weight: 500;
         line-height: normal;
-        margin-bottom: $padding / 2;
-        margin-top: $padding / 1.75;
+        margin-bottom: 0;
+        margin-top: 0;
+        transition: opacity $transition;
+
+        &:hover {
+            opacity: 0.88;
+        }
+    }
+
+    &__title-link {
+        display: block;
+        padding-bottom: $padding / 2;
+        padding-top: $padding / 1.75;
     }
 
     &__text {
