--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -29,11 +29,11 @@
 }
 
 .page-main {
-    max-width: 760px;
+    width: 760px;
 }
 
 .page-sitebar {
-    max-width: 257px;
+    width: 257px;
 }
 
 .page-title {
