--- a/assets/scss/general/_includes.scss
+++ b/assets/scss/general/_includes.scss
@@ -21,6 +21,8 @@
 @import "blocks/footer";
 @import "blocks/breadcrumbs";
 @import "blocks/others-list";
+@import "blocks/pagination";
+@import "blocks/arhive-list";
 
 // Pages
 @import "../pages/index";
