--- a/assets/scss/blocks/_data&comments.scss
+++ b/assets/scss/blocks/_data&comments.scss
@@ -41,6 +41,10 @@
         &:hover {
             opacity: 0.88;
         }
+
+        &-count {
+            margin-left: 5px;
+        }
     }
 }
  
