--- a/assets/scss/general/_includes.scss
+++ b/assets/scss/general/_includes.scss
@@ -12,6 +12,7 @@
 @import "blocks/logo";
 @import "blocks/main-menu";
 @import "blocks/languages";
+@import "blocks/link-arrow";
 @import "blocks/comments";
 @import "blocks/data&comments";
 @import "blocks/article-prew";
@@ -26,6 +27,7 @@
 @import "blocks/album-prev";
 @import "blocks/album";
 @import "blocks/classes";
+
 
 // Pages
 @import "../pages/index";
