--- a/assets/scss/blocks/_album.scss
+++ b/assets/scss/blocks/_album.scss
@@ -40,13 +40,13 @@
             left: 0;
             bottom: 0;
             right: 0;
-            transform: translateY(-100%);
-            transition: transform 0.25s ease;    
+            opacity: 0;
+            transition: opacity 0.25s ease;    
         }
 
         &:hover {
             &:after {
-                transform: translateY(0);
+                opacity: 1;
             }    
         }
     }
