Add some responsive

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4,6 +4,7 @@
 @import "config/typography";
 @import "config/layout";
 @import "config/interaction";
+@import "config/media-queries";
 
 // Utils
 @import "utils/functions";
