--- a/assets/scss/blocks/_arhive-list.scss
+++ b/assets/scss/blocks/_arhive-list.scss
@@ -2,9 +2,21 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    text-align: left;
 
     &:not(:last-child) {
         margin-bottom: $padding * 4;
+    }
+
+    @include media-max($large) {    
+       display: inline-block;
+       width: 24.5%;
+       min-width: 165px;
+       margin-top: $padding * 2;
+
+       &:not(:last-child) {
+            margin-bottom: $padding * 0.5;
+        }
     }
 
     &__title {
