--- a/assets/scss/blocks/_classes.scss
+++ b/assets/scss/blocks/_classes.scss
@@ -11,6 +11,7 @@
         margin-left: -$padding;
         margin-right: -$padding;
         position: relative;
+        flex-wrap: wrap;
 
         &:not(:last-of-type) {
             margin-bottom: $padding * 2;
@@ -26,6 +27,13 @@
             bottom: 0;
             left: $padding;
             background-color: $content-bg-color;
+        }
+
+        @include media-max($medium) {
+            &::after {
+                max-width: 100%;
+                left: 0;
+            }
         }
     }
 
@@ -45,6 +53,11 @@
                     transform: translateX(7px);
                 }
             }
+        }
+
+        @include media-max($medium) {
+            width: 80%;
+            margin-bottom: $padding;
         }
 
         &-name {
