--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -7,6 +7,8 @@
     position: relative;
     z-index: 1;
 
+    display: none;
+
     &--shadow {
         box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
     }
