--- a/assets/scss/blocks/_pagination.scss
+++ b/assets/scss/blocks/_pagination.scss
@@ -4,6 +4,11 @@
     justify-content: center;
     width: 100%;
     margin-top: $padding * 3;
+    flex-wrap: wrap;
+
+    @include media-max($xx-small) {
+        justify-content: flex-start;
+    }
 
     &__item {
         min-width: 35px;
@@ -35,6 +40,10 @@
         &.first,
         &.last {
             padding: 0 $padding * 0.75;
+        }
+
+        @include media-max($xx-small) {
+            margin-top: $padding * 0.5;
         }
     }
 }
