--- a/assets/scss/general/_page.scss
+++ b/assets/scss/general/_page.scss
@@ -8,15 +8,19 @@ html, body {
 
 html {
     font-size: $font-size;
+
+    @include media-max($medium) {    
+        font-size: 15px;
+    };
 }
 
 body {
-    font-size: $font-size;
+    font-size: inherit;
     font-weight: 300;
     overflow-x: hidden;
     font-family: $font-family;
     line-height: $line-height;
-    min-width: $content-min-width;
+    min-width: 320px;
     color: $font-color;
     background-color: $backface-color;
 }
