--- a/assets/scss/utils/_mixins.scss
+++ b/assets/scss/utils/_mixins.scss
@@ -44,3 +44,13 @@
         src: $src;
     }
 }
+
+// =============================================================================
+// Media
+// =============================================================================
+
+@mixin media-max($breakpoint) {
+    @media screen and (max-width: $breakpoint) {
+        @content;
+    } 
+}
